<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	xmlns:tools="http://schemas.android.com/tools" 
    android:background="@drawable/nurse_bg"
	android:layout_width="match_parent" 
	android:layout_height="match_parent" 
	android:paddingBottom="@dimen/activity_vertical_margin" 
	android:paddingLeft="@dimen/activity_horizontal_margin" 
	android:paddingRight="@dimen/activity_horizontal_margin" 
	android:paddingTop="@dimen/activity_vertical_margin" 
	android:orientation="vertical"
	tools:context=".group0932.triage.UpdateVitals" >
	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_temp" />
    
    <EditText
        android:id="@+id/temp_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/temp" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_heart_rate" />
    
    <EditText
        android:id="@+id/heart_rate_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/heart_rate"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_blood_press" />

    <EditText
        android:id="@+id/blood_press_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/blood_press"/>

    <EditText
        android:id="@+id/blood_press_field2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/blood_press2" />
 
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    
    <TextView
       android:id="@+id/show_date2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="time" />
    
    <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_margin="15dp"
       android:text="@string/record_vitals"
       android:onClick="recordVitals"  />
    </LinearLayout>
    
</LinearLayout>
