<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	xmlns:tools="http://schemas.android.com/tools" 
	android:layout_width="match_parent" 
    android:background="@drawable/phy_bg"
	android:layout_height="match_parent" 
	android:paddingBottom="@dimen/activity_vertical_margin" 
	android:paddingLeft="@dimen/activity_horizontal_margin" 
	android:paddingRight="@dimen/activity_horizontal_margin" 
	android:paddingTop="@dimen/activity_vertical_margin" 
	android:orientation="vertical"
	tools:context=".group0932.triage.UpdatePrescrip" >
	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_add_prescrip" />
    
    <EditText
        android:id="@+id/med_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_med" >

        <requestFocus />
    </EditText>
    

    <EditText
        android:id="@+id/instruct_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/label_instruct"/>
    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    
    <TextView
       android:id="@+id/show_date3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="time" />
    
    <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_margin="15dp"
       android:text="@string/record_vitals"
       android:onClick="recordPrescrip"  />
    </LinearLayout>
    
</LinearLayout>
