<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nurse_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".group0932.triage.MainActivity" >

    <TextView
        android:id="@+id/show_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Name" />

    <TextView
        android:id="@+id/show_health_card_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Health Card Num" />

    <TextView
        android:id="@+id/show_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Date of Birth" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/create_visit"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:onClick="createVisit"
            android:text="@string/new_visit_record" />

        <Button
            android:id="@+id/update_visit"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:onClick="updateVisit"
            android:text="@string/update_visit_record" />

        <Button
            android:id="@+id/seen_by_doctor"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:onClick="seenByDoctor"
            android:text="@string/seen_by_doctor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/view_visit"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:onClick="viewVisit"
            android:text="@string/view_visit_record" />

        <Button
            android:id="@+id/save_visit"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="0dp"
            android:onClick="saveVisit"
            android:text="@string/save_visit_record" />
    </LinearLayout>

    <TextView
        android:id="@+id/show_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="time" />

</LinearLayout>