<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group0932.triage.LoginActivity" >

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/label_password"
        android:inputType="textPassword"
        android:textColorHint="#1a3659" >
    </EditText>

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/label_user"
        android:textColorHint="#1a3659" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        style="@style/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:onClick="login"
        android:padding="15dp"
        android:text="@string/label_login" />

    <ImageView
        android:id="@+id/login_screen_title"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_above="@+id/username"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

</RelativeLayout>